# spotify-playlist-generator-dev

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  init_project.py  pyproject.toml
.github/workflows/: combined.yml  spotify_history_sync.yml  test.yml  version-bump.yml
src/project_name/: __init__.py
src/spotify_playlist_generator/: config.py  get_spotify_refresh_token.py  logger.py  sheet_logging.py  sync.py
tests/project_name/: test_import_common_utils.py
tests/spotify_playlist_generator/: test_get_spotify_refresh_token.py  test_import_common_utils.py  test_sync.py
