[tool.poetry]
name = "spotify_playlist_generator"
version = "0.0.7"
description = "Starter template for Kaiano's Python projects with CI, pre-commit, coverage, and shared utils."
authors = ["Kaiano Levine <kaiano@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "spotify_playlist_generator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
kaiano-common-utils = { git = "https://github.com/kaianolevine/kaiano-common-utils.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.0"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.2"
pre-commit = "^4.2.0"
coverage = "^7.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 90
show_missing = true
